clean and split services
