# api-spec/protobuf/gen/delegatee/v1/service.pb.rgw.go
@@ -110,49 +110,6 @@ func request_DelegateeService_RevokeDelegation_0(ctx context.Context, marshaler 
 
 }
 
-func request_AdminService_ListDelegations_0(ctx context.Context, marshaler gateway.Marshaler, mux *gateway.ServeMux, client AdminServiceClient, req *http.Request, pathParams gateway.Params) (proto.Message, gateway.ServerMetadata, error) {
-	var protoReq ListDelegationsRequest
-	var metadata gateway.ServerMetadata
-
-	msg, err := client.ListDelegations(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func request_AdminService_GetStatus_0(ctx context.Context, marshaler gateway.Marshaler, mux *gateway.ServeMux, client AdminServiceClient, req *http.Request, pathParams gateway.Params) (proto.Message, gateway.ServerMetadata, error) {
-	var protoReq GetStatusRequest
-	var metadata gateway.ServerMetadata
-
-	msg, err := client.GetStatus(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func request_AdminService_CancelDelegation_0(ctx context.Context, marshaler gateway.Marshaler, mux *gateway.ServeMux, client AdminServiceClient, req *http.Request, pathParams gateway.Params) (proto.Message, gateway.ServerMetadata, error) {
-	var protoReq CancelDelegationRequest
-	var metadata gateway.ServerMetadata
-
-	var (
-		val string
-		err error
-		_   = err
-	)
-
-	val = pathParams.ByName("address")
-	if val == "" {
-		return nil, metadata, gateway.ErrPathParameterMissing{Name: "address"}
-	}
-
-	protoReq.Address, err = protoconvert.String(val)
-	if err != nil {
-		return nil, metadata, gateway.ErrPathParameterTypeMismatch{Err: err, Name: "address"}
-	}
-
-	msg, err := client.CancelDelegation(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
 // RegisterDelegateeServiceHandlerFromEndpoint is same as RegisterDelegateeServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterDelegateeServiceHandlerFromEndpoint(ctx context.Context, mux *gateway.ServeMux, endpoint string, opts []grpc.DialOption) error {
@@ -271,113 +228,6 @@ func RegisterDelegateeServiceHandlerClient(ctx context.Context, mux *gateway.Ser
 		}
 
 		resp, md, err := request_DelegateeService_RevokeDelegation_0(annotatedContext, inboundMarshaler, mux, client, req, pathParams)
-		annotatedContext = gateway.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			mux.HTTPError(annotatedContext, outboundMarshaler, w, req, err)
-			return
-		}
-
-		mux.ForwardResponseMessage(annotatedContext, outboundMarshaler, w, req, resp)
-	})
-
-}
-
-// RegisterAdminServiceHandlerFromEndpoint is same as RegisterAdminServiceHandler but
-// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterAdminServiceHandlerFromEndpoint(ctx context.Context, mux *gateway.ServeMux, endpoint string, opts []grpc.DialOption) error {
-	conn, err := grpc.DialContext(ctx, endpoint, opts...)
-	if err != nil {
-		return err
-	}
-	defer func() {
-		if err != nil {
-			if cerr := conn.Close(); cerr != nil {
-				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
-			}
-			return
-		}
-		go func() {
-			<-ctx.Done()
-			if cerr := conn.Close(); cerr != nil {
-				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
-			}
-		}()
-	}()
-
-	RegisterAdminServiceHandler(ctx, mux, conn)
-	return nil
-}
-
-// RegisterAdminServiceHandler registers the http handlers for service AdminService to "mux".
-// The handlers forward requests to the grpc endpoint over "conn".
-func RegisterAdminServiceHandler(ctx context.Context, mux *gateway.ServeMux, conn *grpc.ClientConn) {
-	RegisterAdminServiceHandlerClient(ctx, mux, NewAdminServiceClient(conn))
-}
-
-// RegisterAdminServiceHandlerClient registers the http handlers for service AdminService
-// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "AdminServiceClient".
-// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "AdminServiceClient"
-// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
-// "AdminServiceClient" to call the correct interceptors.
-func RegisterAdminServiceHandlerClient(ctx context.Context, mux *gateway.ServeMux, client AdminServiceClient) {
-
-	mux.HandleWithParams("GET", "/v1/admin/delegate", func(w http.ResponseWriter, req *http.Request, pathParams gateway.Params) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := mux.MarshalerForRequest(req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = gateway.AnnotateContext(ctx, mux, req, "/delegatee.v1.AdminService/ListDelegations", gateway.WithHTTPPathPattern("/v1/admin/delegate"))
-		if err != nil {
-			mux.HTTPError(ctx, outboundMarshaler, w, req, err)
-			return
-		}
-
-		resp, md, err := request_AdminService_ListDelegations_0(annotatedContext, inboundMarshaler, mux, client, req, pathParams)
-		annotatedContext = gateway.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			mux.HTTPError(annotatedContext, outboundMarshaler, w, req, err)
-			return
-		}
-
-		mux.ForwardResponseMessage(annotatedContext, outboundMarshaler, w, req, resp)
-	})
-
-	mux.HandleWithParams("GET", "/v1/admin/status", func(w http.ResponseWriter, req *http.Request, pathParams gateway.Params) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := mux.MarshalerForRequest(req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = gateway.AnnotateContext(ctx, mux, req, "/delegatee.v1.AdminService/GetStatus", gateway.WithHTTPPathPattern("/v1/admin/status"))
-		if err != nil {
-			mux.HTTPError(ctx, outboundMarshaler, w, req, err)
-			return
-		}
-
-		resp, md, err := request_AdminService_GetStatus_0(annotatedContext, inboundMarshaler, mux, client, req, pathParams)
-		annotatedContext = gateway.NewServerMetadataContext(annotatedContext, md)
-		if err != nil {
-			mux.HTTPError(annotatedContext, outboundMarshaler, w, req, err)
-			return
-		}
-
-		mux.ForwardResponseMessage(annotatedContext, outboundMarshaler, w, req, resp)
-	})
-
-	mux.HandleWithParams("DELETE", "/v1/admin/delegate/:address", func(w http.ResponseWriter, req *http.Request, pathParams gateway.Params) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := mux.MarshalerForRequest(req)
-		var err error
-		var annotatedContext context.Context
-		annotatedContext, err = gateway.AnnotateContext(ctx, mux, req, "/delegatee.v1.AdminService/CancelDelegation", gateway.WithHTTPPathPattern("/v1/admin/delegate/{address}"))
-		if err != nil {
-			mux.HTTPError(ctx, outboundMarshaler, w, req, err)
-			return
-		}
-
-		resp, md, err := request_AdminService_CancelDelegation_0(annotatedContext, inboundMarshaler, mux, client, req, pathParams)
 		annotatedContext = gateway.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			mux.HTTPError(annotatedContext, outboundMarshaler, w, req, err)
